--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,6 +68,46 @@ header {
     text-align: center;
     border-bottom: rgba(255, 0, 0, 0);
 }
-.card-custom {
+.card-padding {
     padding-bottom: 50px;
+}
+.card-btn {
+    border-radius: 50px;
+    background-color: rgba(9, 80, 121, 0.685) ;
+    display: inline-block;
+    text-decoration: none;
+    padding: 5px 10px;
+    margin-right: 5px;
+    border: 2px solid rgba(251, 251, 251, 0);
+    color: white;
+}
+.card-btn:hover,
+.card-btn:active {
+    border: 2px solid black;
+    /* background-color: black; */
+    color: rgb(204, 3, 3);
+}
+.card-custom {
+    border: 2px solid rgba(13, 98, 94, 0.993);
+    border-radius: 20px;
+}
+
+
+/* --------------Footer Part ----------------------------  */
+
+footer {
+    background-color: black;
+}
+.footer-nav {
+    /* list-style: none; */
+    display: inline-block;
+}
+.footer-nav a {
+    text-decoration: none;
+    display: inline-block;
+    color: antiquewhite;
+}
+.copyrights{
+    color: antiquewhite;
+    text-align: center;
 }
