--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -83,9 +83,9 @@ header {
 }
 .card-btn:hover,
 .card-btn:active {
-    border: 2px solid black;
-    /* background-color: black; */
-    color: rgb(204, 3, 3);
+    border: 2px solid rgb(200, 3, 3);
+    background-color: black;
+    color: rgb(250, 250, 250);
 }
 .card-custom {
     border: 2px solid rgba(13, 98, 94, 0.993);
