--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,9 @@
 /* Basic Settigs ------------------ */
 
+* {
+    font-family: 'Libre Baskerville', serif;
+}
+
  h1 {
     color: blanchedalmond;
     font-family: 'Libre Baskerville', serif;
@@ -93,10 +97,45 @@ header {
 }
 
 
+/* Page Question Secion -------------------------- */
+
+.question-section {
+    
+}
+
+.Topic h1 {
+color: rgba(13, 98, 94, 0.685);
+text-align: center;
+margin: 30px;
+}
+.Q-heading a {
+    border-radius: 50px;
+    background-color: rgba(9, 80, 121, 0.685) ;
+    display: inline-block;
+    text-decoration: none;
+    padding: 2px 5px;
+    margin-right: 5px;
+    border: 2px solid rgba(251, 251, 251, 0);
+    color: white;
+    font-size: smaller;
+}
+.Q-heading a:hover,
+.Q-heading a:active {
+    border: 2px solid rgb(200, 3, 3);
+    background-color: black;
+    color: rgb(250, 250, 250);
+}
+.Q-heading small {
+    color: green;
+}
+
 /* --------------Footer Part ----------------------------  */
 
 footer {
     background-color: black;
+    /* position: fixed; */
+    bottom: 0;
+    width: 100%;
 }
 .footer-nav {
     /* list-style: none; */
@@ -110,4 +149,8 @@ footer {
 .copyrights{
     color: antiquewhite;
     text-align: center;
+}
+footer h6 {
+    padding-top: 10px;
+    color: antiquewhite;
 }
