--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,4 @@
 /* Basic Settigs ------------------ */
-
 * {
     font-family: 'Libre Baskerville', serif;
 }
@@ -20,15 +19,13 @@
     color: blanchedalmond;
     font-family: 'Libre Baskerville', serif;
 }
-
 /*--------------------------------------- nav bar ------------------------------- */
-
-.custom-color {
-    /* background-color: rgba(9, 80, 121, 0.685); */
+.custom-nav {
     background-color: rgba(9, 80, 121, 0.685);
+    z-index: 100;
+    border-bottom: 2px solid rgba(238, 6, 207, 0.685);
 
 }
-
 /* ----------------------------- header setting and styling -------------------------------- */
 
 header {
@@ -45,8 +42,6 @@ header {
     top: 50%; 
     transform: translate(-50%,-50%);
 }
-
-
 /* glowing Text */
 .glow {
     animation: glow 1s ease-in-out infinite alternate;
@@ -55,13 +50,10 @@ header {
     from {
       text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
     }
-    
     to {
       text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
     }
   }
-
-
 .header-btn {
     border-radius: 50px;
     background-color: rgba(9, 80, 121, 0.685) ;
@@ -77,12 +69,10 @@ header {
     background-color: black;
 }
 /* section2 Card and Topic for Disccusions -------*------***-**- */
-
 .heading {
     padding-top: 80px;
     margin-bottom: 40px;
 }
-
 .topics-section {
     background-color: rgba(170, 167, 167, 0.452);
 }
@@ -114,15 +104,10 @@ header {
     border: 2px solid rgba(13, 98, 94, 0.993);
     border-radius: 20px;
 }
-
 form {
     margin-bottom: 50px;
 }
-
-
 /* Page Question Secion -------------------------- */
-
- 
 .Topic h1 {
 color: rgba(13, 98, 94, 0.685);
 text-align: center;
@@ -148,69 +133,16 @@ margin: 30px;
 .Q-heading small {
     color: green;
 }
-
-
 /* Replies Page Css ---------------------------------------  */
-
-/* .Question {
-    
-color: rgba(13, 98, 94, 0.685);
-} */
-
 .reply-card  {
     margin-bottom: 5px;
 }
-
 .Question_replyPage h2 {
     margin-top: 30px;
     color: black;
 }
-
-
 /* --------------Footer Part ----------------------------  */
-
-
 footer {
     background-color:  rgba(9, 80, 121, 0.685) ;
-    /* padding: 50px; */
-}/*
-.footer-nav {
-    list-style: none ;
-    float: left;
-} */
-
-
-/*
-.footer-nav li
-{
-    display: inline-block;
-    margin-right: 20px;
+    
 }
-
-.footer-nav li:last-child
-{
-    margin-right: 0;
-}
-
-.footer-nav li a:link ,
-.footer-nav li a:visited
-{
-    text-decoration: none;
-    border: 0;
-    color: #888;
-    -webkit-transition: color 0.5s;
-    transition: color 0.5s;
-}
-
-.footer-nav li a:active ,
-.footer-nav li a:hover  {
-    color: #e6e6e6 ;
-}
-
-footer p {
-    color: #888 ;
-    text-align: center;
-    font-size: 90%;
-    margin-top: 30px;
-    bottom: 0;
-} */
